--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Nathalya</title>
 </head>
 <body>
-    <h1>vai ser uma imagem aqui</h1>
+   <header class="cabecalho"> 
+    <img class="cabecalho-imagem" src="./alurastart logo 1.png" alt="logo da alurastart">
 </body>
 </html>
 <link rel="stylesheet" href="style.css">
-<ul>
-    <li>Estudante</li>
-    <li>Escola</li>
+<ul class="cabecalho-lista">
+    <li class="cabecalho-lista-item">Estudante</li>
+    <li class="cabecalho-lista-item">Escola</li>
 </ul>
-</header>
