--- a/index.html
+++ b/index.html
@@ -8,10 +8,51 @@
 <body>
    <header class="cabecalho"> 
     <img class="cabecalho-imagem" src="./alurastart logo 1.png" alt="logo da alurastart">
-</body>
-</html>
-<link rel="stylesheet" href="style.css">
-<ul class="cabecalho-lista">
+   <link rel="stylesheet"  href="style.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">"
+   <ul class="cabecalho-lista">
     <li class="cabecalho-lista-item">Estudante</li>
     <li class="cabecalho-lista-item">Escola</li>
 </ul>
+</header>
+<section class="Escola">
+    <div class="escola-div-conteudo">
+    <h2 class="escola_titulo">Sobre a escola</h2>
+    <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
+    <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+    </div>
+    <img class="escola-imagem" src="Escola.jpg" alt="sala de aula">
+  </section>
+  <section class="estudante">
+    <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+    <div class="estudante-todos">
+        <span></span>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="Marcelo 1.png" alt="foto do marcelo">
+        <h3 class="estudante-nome">Marcelo</h3>
+        <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github 1.png"  alt="icone github"></a>
+        <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin 1.png" alt="icone linkedin"></a>
+        <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram 1.png" alt="icone instagram"></a>
+
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="Marcelo 1.png" alt="foto do marcelo">
+        <h3 class="estudante-nome">Marcelo</h3>
+        <img class="estudante-icone" src="github 1.png" alt="icone github">
+        <img class="estudante-icone" src="linkedin 1.png" alt="icone linkedin">
+        <img class="estudante-icone" src="instagram 1.png" alt="icone instagram">
+    </div>
+</div>
+</section>
+<footer class="rodape">
+    <img class="rodape-imagem"src="alurastart logo.png" alt="logo da alura start">
+</footer>
+</body>
+
+</html>
+
+</body>
+
+</html>
