--- a/index.html
+++ b/index.html
@@ -27,27 +27,55 @@
   </section>
   <section class="estudante">
     <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+    <span></span>
     <div class="estudante-todos">
-        <span></span>
+
     <div class="estudante-div">
         <img class="estudante-imagem" src="Marcelo 1.png" alt="foto do marcelo">
         <h3 class="estudante-nome">Marcelo</h3>
         <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github 1.png"  alt="icone github"></a>
         <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin 1.png" alt="icone linkedin"></a>
         <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram 1.png" alt="icone instagram"></a>
+        </div>
 
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="Giulia.jpeg" alt="foto da giulia">
+            <h3 class="estudante-nome">Giulia</h3>
+            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github 1.png"  alt="icone github"></a>
+            <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin 1.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/giuliaxzzl?igsh=b2QxaG82cTZnYjBm"><img class="estudante-icone" src="instagram 1.png" alt="icone instagram"></a>
+         </div>
+
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="Nathalya.jpeg" alt="foto da Nathalya">
+                <h3 class="estudante-nome">Nathalya</h3>
+                <a href="https://github.com/Nathalyacarolini/site-escola.git"><img class="estudante-icone" src="github 1.png"  alt="icone github"></a>
+                <a href="www.linkedin.com/in/nathalya-teixeira-731b692b9"><img class="estudante-icone" src="linkedin 1.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/nathalya.carolini?igsh=MW4xcjM0MngxYTNiMQ=="><img class="estudante-icone" src="instagram 1.png" alt="icone instagram"></a>
+              </div>
+
+                <div class="estudante-div">
+                    <img class="estudante-imagem" src="Marcelo 1.png" alt="foto do marcelo">
+                    <h3 class="estudante-nome">Marcelo</h3>
+                    <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github 1.png"  alt="icone github"></a>
+                    <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin 1.png" alt="icone linkedin"></a>
+                    <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram 1.png" alt="icone instagram"></a>
+                      </div>   
+
+                      <div class="estudante-div">
+                        <img class="estudante-imagem" src="Marcelo 1.png" alt="foto do marcelo">
+                        <h3 class="estudante-nome">Marcelo</h3>
+                        <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github 1.png"  alt="icone github"></a>
+                        <a href="https://www.linkedin.com/in/marcelopaludetto/"><img class="estudante-icone" src="linkedin 1.png" alt="icone linkedin"></a>
+                        <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram 1.png" alt="icone instagram"></a>
+                          </div>                
     </div>
-    <div class="estudante-div">
-        <img class="estudante-imagem" src="Marcelo 1.png" alt="foto do marcelo">
-        <h3 class="estudante-nome">Marcelo</h3>
-        <img class="estudante-icone" src="github 1.png" alt="icone github">
-        <img class="estudante-icone" src="linkedin 1.png" alt="icone linkedin">
-        <img class="estudante-icone" src="instagram 1.png" alt="icone instagram">
     </div>
 </div>
 </section>
 <footer class="rodape">
-    <img class="rodape-imagem"src="alurastart" alt="logo da alura start">
+    <img class="rodape-imagem"src="alurastart logo 1.png" alt="logo da alura start">
+
 </footer>
 </body>
 
